<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:gl="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.myattendance.src.MainActivity"
    tools:showIn="@layout/main_menu_bar"
    style="@style/parent.contentLayout"
    android:background="#00000000">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText"
                    android:layout_gravity="bottom"
                    android:text="@string/app_name_mm" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/hero"
                    android:adjustViewBounds="true" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="370dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:onClick="scanQr"
                        app:cardCornerRadius="15dp"
                        app:cardPreventCornerOverlap="true">

                        <RelativeLayout
                            android:layout_width="366dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/home_gradient_maths"
                            android:minHeight="100dp"
                            android:padding="10dp">

                            <ImageView
                                style="@style/homeCardImage"
                                android:maxHeight="90dp"
                                android:src="@drawable/home_ic_maths" />

                            <TextView
                                style="@style/viewParent.headerText.HomeCardTitle"
                                android:text="@string/scan_button_title" />

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentBottom="true"
                                android:layout_marginStart="6dp"
                                android:layout_marginLeft="6dp"
                                android:layout_marginBottom="19dp"
                                android:text="@string/scan_qr_instruction"
                                android:textColor="@android:color/white" />

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:onClick="selectClass"
                        app:cardCornerRadius="15dp"
                        app:cardPreventCornerOverlap="true">

                        <net.colindodd.gradientlayout.GradientRelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:minHeight="100dp"
                            android:padding="10dp"
                            gl:end_color="@color/gradientLightYellow2"
                            gl:orientation="LEFT_RIGHT"
                            gl:start_color="@color/gradientLightOrange2">

                            <ImageView
                                style="@style/homeCardImage"
                                android:maxHeight="90dp"
                                android:src="@drawable/home_ic_chemistry" />

                            <TextView
                                android:id="@+id/textViewSub3Title"
                                style="@style/viewParent.headerText.HomeCardTitle"
                                android:text="@string/genqr_button_title" />

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentBottom="true"
                                android:layout_marginStart="6dp"
                                android:layout_marginLeft="6dp"
                                android:layout_marginBottom="19dp"
                                android:text="@string/gen_qr_instruction"
                                android:textColor="@android:color/white" />


                        </net.colindodd.gradientlayout.GradientRelativeLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
